# DaVit

./: Dockerfile  LICENCE  README.md  entrypoint.sh  pyproject.toml
app/chkpts/: vit_v1_drive.txt
app/scripts/: drive.py  utils.py
app/simulator-windows-64/: nohup.out
app/simulator-windows-64/Default Windows desktop 64-bit_Data/: output_log.txt
